tree-sitter-bag-notation/corpus/comments.txt
=====>>
Full line comments
=====>>

---
---

% this is a comment
xr |
% this is also a comment

----->>

(file (tune
  (header)
    (comment)
    (line
      (measure
        (note_cluster (note (embellishment) (pitch))) (barline)))
    (comment)))



=====>>
Trailing comments
=====>>

---
---

xr | % xb
xr |

----->>

(file (tune
  (header)
    (line
      (measure
        (note_cluster (note (embellishment) (pitch))) (barline))
      (tail_comment))
    (line
      (measure
        (note_cluster (note (embellishment) (pitch))) (barline)))))
