tree-sitter-bag-notation/corpus/fields.txt
=====>>
Inline field
=====>>

---
---

xa (meter: 6/8) xc |

----->>

(file (tune
  (header)
  (voice
    (bar
      (cluster (note (embellishment) (pitch)))
      (field  (field_label) (field_value))
      (cluster (note (embellishment) (pitch)))
      (barline)))))


=====>>
Field without value
=====>>

---
---

xa (triplet) xc |

----->>

(file (tune
  (header)
  (voice
    (bar
      (cluster (note (embellishment) (pitch)))
      (field (field_label))
      (cluster (note (embellishment) (pitch)))
      (barline)))))




=====>>
Field labels and values with spaces
=====>>

---
some label: long value
---

xa (valueless label) xc (space label: value words) |

----->>

(file (tune
  (header
    (field (field_label) (field_value)))
  (voice
    (bar
      (cluster (note (embellishment) (pitch)))
      (field (field_label))
      (cluster (note (embellishment) (pitch)))
      (field (field_label) (field_value))
      (barline)))))


=====>>
Leading inline field
=====>>

---
---

(h) xa xc |
(h) | xa xc |

----->>

(file (tune
  (header)
    (voice
      (field (field_label))
      (bar
        (cluster (note (embellishment) (pitch)))
        (cluster (note (embellishment) (pitch)))
        (barline)))
    (voice
      (field (field_label))
      (barline)
      (bar
        (cluster (note (embellishment) (pitch)))
        (cluster (note (embellishment) (pitch)))
        (barline)))))
