tree-sitter-bag-notation/corpus/header.txt
=====>>
Basic header
=====>>

---
title: tune name
---

----->>

(file (tune
  (header
    (field
      (field_label)
      (field_value)))))


=====>>
Multiple fields
=====>>

---
title: tune name
style: 2/4 March
tags: foo, bar, baz
---

----->>

(file (tune
  (header
    (field (field_label) (field_value))
    (field (field_label) (field_value))
    (field (field_label) (field_value)))))
