tree-sitter-bag-notation/corpus/notes.txt
=====>>
Scale
=====>>

---
---

q r b c d e f g a |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (note_cluster (note (pitch)))
      (barline))))))


=====>>
Note clusters
=====>>

---
---

qrbc defga |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (note_cluster
        (note (pitch))
        (note (pitch))
        (note (pitch))
        (note (pitch)))
      (note_cluster
        (note (pitch))
        (note (pitch))
        (note (pitch))
        (note (pitch))
        (note (pitch)))
      (barline))))))


=====>>
Embellishments
=====>>

---
---

xrxc vvbd |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (note_cluster
        (note (embellishment) (pitch))
        (note (embellishment) (pitch)))
      (note_cluster
        (note (embellishment) (pitch))
        (note (pitch)))
      (barline))))))


=====>>
Durations
=====>>

---
---

g+ f/e. r.b/ c+. d- |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (note_cluster
        (note (pitch) (duration)))
      (note_cluster
        (note (pitch) (duration))
        (note (pitch) (duration)))
      (note_cluster
        (note (pitch) (duration))
        (note (pitch) (duration)))
      (note_cluster
        (note (pitch) (duration)))
      (note_cluster
        (note (pitch) (duration)))
      (barline))))))


=====>>
Embellishment literals
=====>>

---
---

xr{bdb}c {qrqgf}bd |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (note_cluster
        (note (embellishment) (pitch))
        (note (literal_embellishment (pitch) (pitch) (pitch)) (pitch)))
      (note_cluster
        (note (literal_embellishment (pitch) (pitch) (pitch) (pitch) (pitch)) (pitch))
        (note (pitch)))
      (barline))))))
